# EmotionMemCore

./: .dockerignore  .env.example  .env.sample  .gitignore  BEGINNER_COMPLETE_GUIDE.md  CLAUDE.md  Dockerfile  HOW_TO_CONNECT.md  INTEGRATION_EXAMPLES.md  README.md  WINDOWS_EXE_BUILD_GUIDE.md  WINDOWS_SETUP_GUIDE.md  build_exe.py  docker-compose.dev.yml  docker-compose.yml  fix_port_error.bat  install_missing_deps.bat  main.py  pyproject.toml  pytest.ini  quick_setup.bat  requirements.txt  run_dashboard.py  start_emotionmemcore.bat  start_with_different_port.py
api/: __init__.py  app.py  dependencies.py  middleware.py
api/endpoints/: __init__.py  batch.py  debug.py  health.py  memory.py  save.py  search.py
api/middleware/: __init__.py  auth.py  cors.py  logging_middleware.py  rate_limit.py
api/schemas/: __init__.py  base.py  emotion.py  memory.py
configs/: development.env  production.env  staging.env
core/embedding/: __init__.py  mock_client.py  openai_client.py
core/llm/: __init__.py  base.py  claude.py  mock.py  prompts.py
docs/: __init__.py  aituberkit-guide.md  integration-guide.md  openapi_config.py  troubleshooting.md
infrastructure/config/: config.yaml  logger.py  messages.py
infrastructure/db/: __init__.py  chroma_client.py  collection_manager.py  memory_store.py
scripts/: build.sh  deploy.sh  test_runner.py
services/: __init__.py  memory_service.py
tests/: conftest.py
tests/e2e/: __init__.py  test_full_workflow.py
tests/integration/: test_api_endpoints.py
tests/unit/: __init__.py  test_db_layer.py  (+1 more)
ui/: __init__.py  dashboard.py
(+10 files in other folders)
