[tool.poetry]
name = "emotionmemcore"
version = "0.1.0"
description = "感情付き記憶RAGシステム - AIとの対話を記憶し、感情的な文脈で検索可能なAPIモジュール"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "api"}, {include = "core"}, {include = "infrastructure"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
chromadb = "^0.4.18"
openai = "^1.6.0"
anthropic = "^0.8.0"
python-dotenv = "^1.0.0"
pyyaml = "^6.0.1"
structlog = "^23.2.0"
httpx = "^0.25.2"
python-multipart = "^0.0.6"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
black = "^23.11.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
mypy = "^1.7.1"
pre-commit = "^3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true